# galore

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  galore.py  ir_CaF2_broadened.txt  mgo_xps.csv  paper.bib  paper.md  pyproject.toml  qwera.py  readthedocs.yml  requirements-readthedocs.txt  requirements-tests.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  question---idea.md  question.md
.github/workflows/: run-tests.yml
docs/: Makefile  make.bat
docs/source/: api_demo_dos_broadening.py  api_demo_pdos_broadening.py  api_demo_weightings.py  cli.rst  conf.py  galore.cli.galore.rst  galore.cli.galore_get_cs.rst  galore.cli.galore_plot_cs.rst  galore.cli.rst  galore.cross_sections.rst  galore.formats.rst  galore.plot.rst  galore.rst  index.rst  modules.rst  theory.rst  tutorials.rst
docs/source/_static/css/: custom.css
docs/source/figures/: ir_schematic.py  pe_schematic.py
galore/: __init__.py  cli.py  cross_sections.py  formats.py  plot.py
galore/.ipynb_checkpoints/: cross_sections-checkpoint.py  formats-checkpoint.py  plot-checkpoint.py
galore/cli/: galore.py  galore_get_cs.py  galore_install_data.py  galore_plot_cs.py  utils.py
galore/data/: cross_sections.json  cross_sections_haxpes.json  cross_sections_ups.json  galore_base.mplstyle  scofield_data.db  yeh-occ.txt
test/: Al_test_scofield.json  Al_test_yeh.json  DOSCAR.1  json_test.json  new_test.py  test.py  test_cross_sections.py  test_csv_data.py  test_gpaw.py  test_plot.py  test_process_pdos.py
test/.ipynb_checkpoints/: test_check_imports-checkpoint.py  test_cross_sections-checkpoint.py  test_gpaw-checkpoint.py  test_process_pdos-checkpoint.py
test/CaF2/: ir_lda_700.txt
test/CdTe/: CdTe.gpw
test/MgO/: vasprun.xml
test/SnO2/: haxpes_data.csv  ups_data.csv  xps_data.csv
testing/: test.py  test_xy_data.csv
